# odyssey-example-cli

./: .gitattributes  .gitignore  LICENSE.md  README.md  pyproject.toml
.github/workflows/: blank.yml  main.yml  python-publish.yml
src/odyssey_example_cli/: cli.py
tests/: test_cli.py
