[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odyssey-example-cli"
dynamic = ["version"]
description = 'Example CLI for odyssey'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Justin Sharma", email = "justin.elite@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click"
]

[project.scripts]
odyssey-example-cli = "odyssey_example_cli.cli:cli"

[project.urls]
Documentation = "https://github.com/unknown/odyssey-example-cli#readme"
Issues = "https://github.com/unknown/odyssey-example-cli/issues"
Source = "https://github.com/unknown/odyssey-example-cli"

[tool.hatch.version]
path = "src/odyssey_example_cli/__about__.py"

[tool.hatch.envs.default]
path = ".venv"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/odyssey_example_cli tests}"

[tool.coverage.run]
source_pkgs = ["odyssey_example_cli", "tests"]
branch = true
parallel = true
omit = [
  "src/odyssey_example_cli/__about__.py",
]

[tool.coverage.paths]
odyssey_example_cli = ["src/odyssey_example_cli", "*/odyssey-example-cli/src/odyssey_example_cli"]
tests = ["tests", "*/odyssey-example-cli/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
